hphp/hack/test/typecheck/construct/lateinit/lateinit4.php.exp
ERROR: File "lateinit4.php", line 4, characters 30-33:
A late-initialized property cannot have a default value (Typing[4277])
ERROR: File "lateinit4.php", line 5, characters 39-42:
A late-initialized property cannot have a default value (Typing[4277])
