hphp/hack/test/typecheck/construct/lateinit/lateinit4.php
<?hh

final class C {
  <<__LateInit>> private int $foo = 1;
  <<__LateInit>> protected static int $bar = 2;
}
